Voeg contacten toe via message list

--- a/src_htmlPhone/static/config/config.json
+++ b/src_htmlPhone/static/config/config.json
@@ -334,6 +334,7 @@
       "APP_MESSAGE_MESS_SMS": "SMS",
       "APP_MESSAGE_MESS_CALL": "Bellen",
       "APP_MESSAGE_MESS_COPY": "Sla nummer op",
+      "APP_MESSAGE_SAVE_CONTACT": "Sla nummer op",
       "APP_DARKTCHAT_TITLE": "Deep Web",
       "APP_DARKTCHAT_NEW_CHANNEL": "Voeg een kanaal toe",
       "APP_DARKTCHAT_DELETE_CHANNEL": "Verwijder een kanaal",
@@ -555,6 +556,7 @@
       "APP_MESSAGE_MESS_SMS": "SMS",
       "APP_MESSAGE_MESS_CALL": "Bellen",
       "APP_MESSAGE_MESS_COPY": "Sla nummer op",
+      "APP_MESSAGE_SAVE_CONTACT": "Sla nummer op",
       "APP_MESSAGE_SERVICE": "Markeer als behandeld",
       "APP_DARKTCHAT_TITLE": "Deep Web",
       "APP_DARKTCHAT_NEW_CHANNEL": "Voeg een kanaal toe",
