--- a/src_htmlPhone/static/config/config.json
+++ b/src_htmlPhone/static/config/config.json
@@ -333,6 +333,7 @@
       "APP_MESSAGE_MESS_NUMBER": "Nummer",
       "APP_MESSAGE_MESS_SMS": "SMS",
       "APP_MESSAGE_MESS_CALL": "Bellen",
+      "APP_MESSAGE_MESS_CALL_ANONYMOUS": "Anoniem bellen",
       "APP_MESSAGE_MESS_COPY": "Sla nummer op",
       "APP_MESSAGE_SAVE_CONTACT": "Sla nummer op",
       "APP_DARKTCHAT_TITLE": "Deep Web",
@@ -555,6 +556,7 @@
       "APP_MESSAGE_MESS_NUMBER": "Nummer",
       "APP_MESSAGE_MESS_SMS": "SMS",
       "APP_MESSAGE_MESS_CALL": "Bellen",
+      "APP_MESSAGE_MESS_CALL_ANONYMOUS": "Anoniem bellen",
       "APP_MESSAGE_MESS_COPY": "Sla nummer op",
       "APP_MESSAGE_SAVE_CONTACT": "Sla nummer op",
       "APP_MESSAGE_SERVICE": "Markeer als behandeld",
